apps/network/metallb/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-metallb
  namespace: metallb-system
spec:
  podSelector:
    matchLabels:
      app: metallb
  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: metallb-system
    ports:
    - protocol: TCP
      port: 7472
    - protocol: TCP
      port: 7946
    - protocol: UDP
      port: 7946
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: TCP
      port: 443

  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: metallb-system
    ports:
    - protocol: TCP
      port: 7472
    - protocol: TCP
      port: 7946
    - protocol: UDP
      port: 7946
